Change Log
==========

$Id$

1.1
---

- improve 'move' and 'delegate' actions: create new run, store source and
  target work items, keep state when moving
- keep access trail (history) in session
- work items: provide 'move' action for assigning a work item to
  another task
- show work items (if present) for arbitrary concepts
- portal page with - now fully editable - portal links
- calendar portlet

1.0
---

New features

- delegation of work items basically working
- show "parents" portlet for anonymous, controlled by global option
  ``showParentsForAnonymous``
- use Lighbox view for media asset listings
- new view: ``list_children.html``
- evaluate action settings also on queries
- new action: ``create institution``
- "send email" feature, controlled by global option ``organize.allowSendEmail``
- presence: portlet showing other users logged-in and working within the
  same loops site, controlled by global option ``organize.showPresence`,
  using new LoopsSessionCredentialsPlugin;
  (Changeset 3466; author: Hannes Plattner)
- form for user registration (``register_user.html``), controlled by options:
  ``registration_principalfolder``, ``registration_groups``
- new action: ``create task``
- quick search field
- external file/media asset type: options for hiding or showing fields on editing
- tracking reports: period details
- loops sites: a query view (``loops_sites.html``); add an option
  ``system.sites:/...,...`` with the paths to the sites that should be
  listed; only sites are listed to which the user has access
- TaskView with task work items listing
- work items: activate by adding option
  ``action.portlet:createWorkitem`` to type; work items listing is shown
  automatically in standard concept view.
- my work items: a query view (``userworkitems.html``); assign the query
  to the person to be referenced as a standard child

Bug fixes

- use correct target view for identifying target concept upon editing