@@ -6,6 +6,8 @@ $Id$
 1.1
 ---
 
+- yellow pages: view task_candidates for selecting persons with required
+  knowledge for task
 - improve 'move' and 'delegate' actions: create new run, store source and
   target work items, keep state when moving
 - keep access trail (history) in session
